refactor: extract store, worker, and policy boundaries across backend domains
Carry out the structure refactoring wave recorded in docs/refactoring-master-plan.md:
- introduce the own LlmMessage contract and split LlmGateway internals into
  LlmRequestPolicy / LlmJsonExecutor / LlmStreamingExecutor, keeping purpose,
  budget, timeout, and fallback behavior unchanged;
- extract SQL boundaries (*Store), async scheduling (*Worker + *JobStore),
  pure rules (*Policy) and untrusted-output parsers from Chat, Memory,
  Interview, Knowledge, Expert, Profile, Push, Resume, Auth, Admin, Tool,
  and Retrieval services, leaving the services as use-case facades;
- ChatService keeps only turn orchestration via context/routing/retrieval/
  answer stages and a completion finalizer; ChatTurnService stays the
  durable-turn state authority;
- fix AdminStore.audit row mapping to tolerate null target users, restoring
  the pre-extraction LinkedHashMap semantics caught by the new regression IT.

Tests ride with the change because the wave rewires constructors across
service and test code: unit tests for the new workers/stores/policies/parsers
plus AdminStorePostgresIT, MessageFeedbackStorePostgresIT, and
ResumeStorePostgresIT against Testcontainers pgvector/pg16 with the full
Flyway chain.

No HTTP, SSE, authentication, Flyway migration, prompt, or provider changes.
Verified at this tree: mvn verify (420 passed, 1 skipped, JaCoCo gate met);
new ITs pass under WSL with -DrunIntegrationTests=true.